[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Hacks/HurtBox.gd" type="Script" id=1]

[node name="HurtBox" type="Area2D"]
space_override = 1
collision_layer = 16
collision_mask = 512
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="." to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_HurtBox_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
